[tool.poetry]
name = "protobuf_test"
version = "0.1.0"
description = ""
authors = ["Luchko Maksym <maksym.luchko@semiotics-lab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^4.25.0"
bson = "^0.5.10"
pymongo = "^4.6.0"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
